Fixed meta description

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -21,6 +21,6 @@
   "Header": {
     "Home": "الرئيسية",
     "FAQ": "الأسئلة الشائعة",
-    "Disclaimer": "تنصل"
+    "Disclaimer": "إخلاء المسؤولية"
   }
 }
