Added Faq + Disclaimer

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -21,6 +21,38 @@
   "Header": {
     "Home": "الرئيسية",
     "FAQ": "الأسئلة الشائعة",
-    "Disclaimer": "إخلاء المسؤولية"
-  }
+    "Disclaimer": "تبرئة"
+  },
+  "Disclaimer": {
+    "1": "الموقع هو مجرد مشروع خيري غير ربحي هدفه الوحيد التوعية لمواجهة وباء كورونا",
+    "2": "جميع الإحصائيات المتواجدة في الموقع مأخوذة مباشرة بدون أي تغييرات من وزارة الصحة",
+    "3": "الموقع لن يكون مسؤولا في حالة استخدام بيانات الموقع من طرف أي مستخدم على نحو يسبب أو يحتمل أن يسبب أي ضرر",
+    "4": "يمكن تغيير أو حذف أي معلومة في هذا الموقع دون إشعار مسبق"
+  },
+  "Faq": [
+    {
+      "Title": "ما هو فيروس (كورونا) COVID-19؟",
+      "Text": "فيروس (كورونا) من فصيلة فيروسات (كورونا) الجديد؛ حيث ظهرت أغلب حالات الإصابة به في مدينة ووهان الصينية نهاية ديسمبر 2019 على صورة التهاب رئوي حاد."
+    },
+    {
+      "Title": "كيف تم تحديد نوع الفيروس؟",
+      "Text": "تم التعرف على الفيروس عن طريق التسلسل الجيني."
+    },
+    {
+      "Title": "ما أصل هذا الفيروس؟",
+      "Text": "يُعتقد أن فيروس (كورونا) الجديد مرتبط بالحيوان؛ حيث إن أغلب الحالات الأولية كان لها ارتباط بسوق للبحريات والحيوانات في مدينة ووهان."
+    },
+    {
+      "Title": "هل ينتقل الفيروس بين البشر؟",
+      "Text": "نعم، ينتقل الفيروس بين البشر من الشخص المصاب بالعدوى إلى شخص آخر عن طريق المخالطة القريبة دون حماية."
+    },
+    {
+      "Title": "هل ينتقل فيروس (كورونا) COVID-19 عبر الشحنات القادمة من الصين؟",
+      "Text": "بناءً على المعلومات المتوافرة حاليًا، لا يوجد خطر في البضائع المستوردة من الصين."
+    },
+    {
+      "Title": "ما أعراض الإصابة بفيروس (كورونا) COVID-19؟",
+      "Text": "تشمل الأعراض النمطية لفيروس (كورونا): الحمى - السعال - ضيق التنفس - وأحيانًا تتطور الإصابة إلى التهاب رئوي. وقد يتسبب في مضاعفات حادة لدى الأشخاص ذوي الجهاز المناعي الضعيف، والمسنين والأشخاص المصابين بأمراض مزمنة مثل: السرطان، والسكري، وأمراض الرئة المزمنة. وعند الشعور بأي من الأعراض السابقة يجب الاتصال بمركز (3030)."
+    }
+  ]
 }
