--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -21,7 +21,8 @@
   "Header": {
     "Home": "الرئيسية",
     "FAQ": "الأسئلة الشائعة",
-    "Disclaimer": "تبرئة"
+    "Disclaimer": "تبرئة",
+    "Advices": "نصائح"
   },
   "Disclaimer": {
     "1": "الموقع هو مجرد مشروع خيري غير ربحي هدفه الوحيد التوعية لمواجهة وباء كورونا",
