--- a/public/locales/En/translation.json
+++ b/public/locales/En/translation.json
@@ -21,6 +21,7 @@
   "Header": {
     "Home": "Home",
     "FAQ": "FAQ",
-    "Disclaimer": "Disclaimer"
+    "Disclaimer": "Disclaimer",
+    "Advices": "Advices"
   }
 }
