Added donation button

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -27,6 +27,23 @@
   "Beta": {
     "Beta": "تجريبي"
   },
+  "Visitors": {
+    "visitors": "الزوار"
+  },
+  "Donations": {
+    "donatenow": "تبرَّع الآن!",
+    "Description": "مع زيادة عدد المستخدمين لهذا الموقع، تزداد معه تكلفة إستضافته، و كوني طالبا جامعيا فالطريقة الوحيدة لضمان إستمرارية هذا المشروع هي عن طريق تبرعاتكم المالية.",
+    "Thanks": "شكرا لكم !",
+    "Close": "إغلاق",
+    "CCP_RIP_TITLE": "RIP",
+    "CCP_RIP_VALUE": "00799999002094707349",
+    "CCP_NUMKEY_TITLE": "رقم الحساب / مفتاح",
+    "CCP_NUMKEY_VALUE": "0020947073 / 49",
+    "CCP_NAME_TITLE": "الإسم",
+    "CCP_NAME_VALUE": "فيصل",
+    "CCP_LASTNAME_TITLE": "اللقب",
+    "CCP_LASTNAME_VALUE": "غول"
+  },
   "Disclaimer": {
     "1": "الموقع هو مجرد مشروع خيري غير ربحي هدفه الوحيد التوعية لمواجهة وباء كورونا",
     "2": "جميع الإحصائيات المتواجدة في الموقع مأخوذة مباشرة بدون أي تغييرات من وزارة الصحة",
