Auto disconnect people after 10 min

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -11,7 +11,8 @@
   },
   "InfoTile": {
     "TotalCases": "مجموع الحالات المؤكدة",
-    "Live": "مباشر"
+    "Live": "مباشر",
+    "Facebook": "الصفحة الرسمية على الفيسبوك"
   },
   "Graph": {
     "NewCases": "حالات جديدة اليوم",
