--- a/public/locales/En/translation.json
+++ b/public/locales/En/translation.json
@@ -11,7 +11,8 @@
   },
   "InfoTile": {
     "TotalCases": "Total Confirmed Cases",
-    "Live": "LIVE"
+    "Live": "LIVE",
+    "Facebook": "Official page on Facebook"
   },
   "Graph": {
     "NewCases": "New Cases Today",
