--- a/public/locales/En/translation.json
+++ b/public/locales/En/translation.json
@@ -27,9 +27,10 @@
   },
   "Disclaimer": {
     "1": "الموقع هو مجرد مشروع خيري غير ربحي هدفه الوحيد التوعية لمواجهة وباء كورونا",
-    "2": "جميع الإحصائيات المتواجدة في الموقع مأخوذة مباشرة بدون أي تغييرات من وزارة الصحة",
-    "3": "الموقع لن يكون مسؤولا في حالة استخدام بيانات الموقع من طرف أي مستخدم على نحو يسبب أو يحتمل أن يسبب أي ضرر",
-    "4": "يمكن تغيير أو حذف أي معلومة في هذا الموقع دون إشعار مسبق"
+    "2": "الموقع مجرد أداة لعرض البيانات، ولا يمثّل أي نزعة إعلامية، ويقوم باتباع كافة المعطيات الممثلة في الموقع الرسمي لوزارة الصحة والسكان وإصلاح المستشفيات الجزائرية",
+    "3": "جميع الإحصائيات المتواجدة في الموقع مأخوذة مباشرة بدون أي تغييرات من وزارة الصحة",
+    "4": "الموقع لن يكون مسؤولا في حالة استخدام بيانات الموقع من طرف أي مستخدم على نحو يسبب أو يحتمل أن يسبب أي ضرر",
+    "5": "يمكن تغيير أو حذف أي معلومة في هذا الموقع دون إشعار مسبق"
   },
   "Beta": {
     "Beta": "BETA"
