Added Hospitalized cases

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -3,7 +3,8 @@
     "Confirmed": "مؤكدة",
     "Active": "نشطة",
     "Recovered": "متعافين",
-    "Deaths": "وفاة"
+    "Deaths": "وفاة",
+    "Hospitalized": "تحت العلاج"
   },
   "Subscription": {
     "Thanks": "!شكرا لإشتراكك",
