--- a/public/locales/En/translation.json
+++ b/public/locales/En/translation.json
@@ -4,7 +4,8 @@
     "Active": "Active",
     "Recovered": "Recovered",
     "Deaths": "Deaths",
-    "Hospitalized": "Under Treatment"
+    "Hospitalized": "Under Treatment",
+    "ConnectionLost": "Reconnecting to server..."
   },
   "Subscription": {
     "Thanks": "Thanks for subscribing!",
