--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -18,7 +18,7 @@
   },
   "Graph": {
     "NewCases": "حالات جديدة اليوم",
-    "Daily": "الحالات الجديدة اليومية",
+    "Daily": "تطور الحالات الإجمالية",
     "Distribution": "توزيع الحالات",
     "NewCasesPerWilaya": "الحالات الجديدة حسب الولاية",
     "NewCasesLabel": "حالات جديدة"
