--- a/public/locales/Fr/translation.json
+++ b/public/locales/Fr/translation.json
@@ -18,7 +18,7 @@
   },
   "Graph": {
     "NewCases": "Nouveaux Cas Aujourd'hui",
-    "Daily": "Nouveaux Cas Quotidiens",
+    "Daily": "Croissance Totale Des cas",
     "Distribution": "Distribution Des Cas",
     "NewCasesPerWilaya": "Nouveaux Cas Par Wilaya",
     "NewCasesLabel": "Nouveaux Cas"
