Added N/A text to Recovered per wilaya

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -5,7 +5,8 @@
     "Recovered": "متعافين",
     "Deaths": "وفاة",
     "Hospitalized": "تحت العلاج",
-    "ConnectionLost": "جاري إعادة الإتصال بالسيرفر ..."
+    "ConnectionLost": "جاري إعادة الإتصال بالسيرفر ...",
+    "NA": "معطيات غير متاحة"
   },
   "Subscription": {
     "Thanks": "!شكرا لإشتراكك",
