--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -50,6 +50,14 @@
     "CCP_LASTNAME_TITLE": "اللقب",
     "CCP_LASTNAME_VALUE": "غول"
   },
+  "Doctor": {
+    "ConsultNow": "إستشر طبيبا مجانا!",
+    "Description": "بالتعاون مع مؤسسة Sihhatech يمكنكم الآن إستشارة طبيب",
+    "Description2": "و ذلك بزيارة الموقع التالي لحجز موعد.",
+    "VisitWebsite": "زيارة الموقع",
+    "Close": "إغلاق",
+    "Free": "مجانا"
+  },
   "Disclaimer": {
     "1": "الموقع هو مجرد مشروع خيري غير ربحي هدفه الوحيد التوعية لمواجهة وباء كورونا",
     "2": "الموقع مجرد أداة لعرض البيانات، ولا يمثّل أي نزعة إعلامية، ويقوم باتباع كافة المعطيات الممثلة في الموقع الرسمي لوزارة الصحة والسكان وإصلاح المستشفيات الجزائرية",
