Switching to Demo Data

--- a/public/locales/Ar/translation.json
+++ b/public/locales/Ar/translation.json
@@ -31,32 +31,17 @@
     "Advices": "نصائح"
   },
   "Beta": {
-    "Beta": "تجريبي"
+    "Beta": "أرشيف"
   },
   "Visitors": {
     "visitors": "الزوار"
   },
-  "Donations": {
-    "donatenow": "تبرَّع الآن!",
-    "Description": "مع زيادة عدد المستخدمين لهذا الموقع، تزداد معه تكلفة إستضافته، و كوني طالبا جامعيا فالطريقة الوحيدة لضمان إستمرارية هذا المشروع هي عن طريق تبرعاتكم المالية.",
-    "Thanks": "شكرا لكم !",
-    "Close": "إغلاق",
-    "CCP_RIP_TITLE": "RIP",
-    "CCP_RIP_VALUE": "00799999002094707349",
-    "CCP_NUMKEY_TITLE": "رقم الحساب / مفتاح",
-    "CCP_NUMKEY_VALUE": "0020947073 / 49",
-    "CCP_NAME_TITLE": "الإسم",
-    "CCP_NAME_VALUE": "فيصل",
-    "CCP_LASTNAME_TITLE": "اللقب",
-    "CCP_LASTNAME_VALUE": "غول"
-  },
-  "Doctor": {
-    "ConsultNow": "إستشر طبيبا مجانا!",
-    "Description": "بالتعاون مع مؤسسة Sihhatech يمكنكم الآن إستشارة طبيب",
-    "Description2": "و ذلك بزيارة الموقع التالي لحجز موعد.",
-    "VisitWebsite": "زيارة الموقع",
-    "Close": "إغلاق",
-    "Free": "مجانا"
+  "Notice": {
+    "SourceCode": "كود المصدر",
+    "Description": "هذا المشروع مؤرشف الآن. جميع الإحصائيات التي تراها على الموقع هي مجرد بيانات تجريبية / وهمية.",
+    "Description2": "لعرض الكود المصدري لهذا المشروع على Github ، يرجى النقر فوق الزر أدناه:",
+    "VisitGithub": "تصفح كود المصدر",
+    "Close": "إغلاق"
   },
   "Disclaimer": {
     "1": "الموقع هو مجرد مشروع خيري غير ربحي هدفه الوحيد التوعية لمواجهة وباء كورونا",
